# rust-ui

./: .gitignore  .gitmodules  Cargo.toml
c_interface/: Cargo.toml  build.rs
c_interface/c_lib/: CLib.cpp  CLib.h  CMakeLists.txt
c_interface/src/: lib.rs
c_interface/src/bindings/: bindings.rs
editor/: Cargo.toml
editor/src/: main.rs
graphics/: Cargo.toml  build.rs
graphics/backend/: CMakeLists.txt  bindings.h  draw.cpp  intern.h  window.cpp
graphics/src/: app.rs  bindings.rs  button.rs  circle.rs  clickable.rs  color.rs  cursor.rs  draw_command.rs  label.rs  lib.rs  rect.rs  stack.rs  style.rs  text.rs  vec.rs  version.rs  widget.rs
rust_main/: Cargo.toml
rust_main/src/: main.rs
src/: application.rs  contrast.rs  error.rs  lib.rs  main.rs  prelude.rs  rect.rs  state.rs
src/actions/: mod.rs  receiver.rs  signal.rs
src/gui/: button.rs  container.rs  hstack.rs  label.rs  mod.rs  text.rs  vstack.rs  widget.rs  widget_builder.rs
src/gui/app/: app.rs  input.rs  interface.rs  mod.rs  ui_app.rs
src/gui/events/: action.rs  event.rs  event_manager.rs  keyboard.rs  mod.rs  mouse.rs  receiver.rs  signal.rs
src/gui/svg/: svg.rs
src/gui/widget/: build_context.rs  build_results.rs  iterator.rs  mod.rs  size_policy.rs  style.rs  theme.rs  widget.rs  widget_instance.rs
src/gui/widget/builder/: align.rs  build_context.rs  build_results.rs  mod.rs  relative_size.rs  text.rs
src/gui/widget/impls/: button.rs  checkbox.rs  clickable.rs  hstack.rs  icon.rs  icon_button.rs  label.rs  menu.rs  mod.rs  panel.rs  rectangle.rs  slider.rs  spacer.rs  text_input.rs  vstack.rs  zstack.rs
src/gui/widget/rendering/: align.rs  anchor.rs  mod.rs
src/gui/widget/state/: mod.rs  observable.rs  state.rs  state_ref.rs
src/scene/: entity_tree.rs  mod.rs  object.rs  scene.rs
(+11 files in other folders)
