[package]
name = "rust-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contrast_renderer = "0.1.1"
env_logger = "0.10.0"
geometric_algebra = "0.2.1"
log = "0.4.17"
pollster = "0.3.0"
winit = "0.28.3"
